# PhysicsJournalPickerAI

./: .gitignore  LICENSE  README.md  app.py  label2id_1000.json  pyproject.toml  requirements.txt  setup_script.py
templates/: index.html
