[project]
name = "PhysicsJournalPickerAI"
version = "0.1.0"
description = "Physics Journal Recommendations using BERT and ChromaDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "flask>=3.1.0",
    "huggingface-hub>=0.29.3",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
